# deepfake-detection

./: .gitignore  README.md  balance.py  data_sample.py  exp_data.py  exp_files.txt  extractor.py  main.py  prepare_colab.sh  pyproject.toml  remover.py  requirements.txt  streamlitapp.py  tasks.py
deepfake_detection/: __init__.py  cnn.py  constants.py  cross_validation.py  dataset.py  learner.py  preprocessing.py  rcnn.py  transforms.py  utils.py  video_loader.py
results_server/: pyproject.toml  server.py  test_server.py
scripts/: data_sample.py  exp_data.py  extractor.py  file_to_stay.txt  remover.py
