[tool.poetry]
authors = ["Mikita Chabatarovich <mikita.chabatarovich@gmail.com>"]
description = "deepfake detection with pytorch (R-CNN)"
license = "MIT"
name = "deepfake"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
