[tool.poetry]
authors = ["Mikita Chabatarovich <mikita.chabatarovich@gmail.com>"]
description = "deepfake detection with pytorch (R-CNN)"
license = "MIT"
name = "deepfake"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
sklearn = "^0.0"
torch = "^1.8.0"
torchvision = "^0.9.0"
tqdm = "^4.59.0"
av = "^8.0.3"
facenet-pytorch = "^2.5.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
