[tool.poetry]
name = "results_server"
version = "0.1.0"
description = "server to receive and results from experiments running in a cloud"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["uvicorn"], version = "^0.65.0"}
uvicorn = "^0.13.4"
python-dotenv = "^0.17.1"
mongoengine = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.25.1"
mongomock = "^3.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
